thread added, does not crash, does nothing of value yet

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -40,6 +40,7 @@
     "import ipywidgets as widgets\n",
     "import json\n",
     "import time\n",
+    "import threading\n",
     "from traitlets import Int, Unicode, Tuple, CInt, Dict, validate, observe\n",
     "\n",
     "class cyjsWidget(widgets.DOMWidget):\n",
@@ -52,6 +53,8 @@
     "    msgToKernel = Unicode(\"{}\").tag(sync=True)\n",
     "    status = \"initial status message\\n\"\n",
     "    selectedNodes = [];\n",
+    "    incomingMessageArrived = False;\n",
+    "    globalStatus = \"blank\"\n",
     "        \n",
     "    def setSize(self, width, height):\n",
     "      self.status += \"setSize(%d, %d)\\n\" % (width, height)\n",
@@ -62,12 +65,31 @@
     "      self.status += \"entering fit (%d)\\n\" % margin\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": margin});\n",
-    "        \n",
+    "    def getBrowserResponse(self):\n",
+    "       self.status += \"entered getBrowserResponse\\n\"\n",
+    "       browserResponse = 0;\n",
+    "       for i in range(1, 3):\n",
+    "         self.status += \"sleeping in getBrowserResponse loop\\n\"\n",
+    "         time.sleep(2)\n",
+    "         if(self.globalStatus == \"done\"):\n",
+    "           browserResponse = 99;\n",
+    "           break;\n",
+    "       self.status += \"thread ending, browserResponse: %d\\n\" % browserResponse;\n",
+    "\n",
     "    def requestSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
+    "      self.incomingMessageArrived = False;\n",
     "      self.status += \"entering requestSelectedNodes\\n\";\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": \"\"});\n",
+    "      # while(self.incomingMessageArrived == False):\n",
+    "      #  self.status += \"about to sleep, waiting for incoming message\\n\";\n",
+    "      #  time.sleep(0.1)\n",
+    "      self.status += \"requestSelectedNodes fell through sleepy loop\\n\";\n",
+    "      self.status += self.msgToKernel\n",
+    "      threading.Thread(target=self.getBrowserResponse).start()\n",
+    "      self.status += \"\\nconcluding requestSelectedNodes\\n\"\n",
+    "        \n",
     "    def getSelectedNodes(self):\n",
     "      self.status += \"entering getSelectedNodes, current content is %s\\n\" % self.selectedNodes\n",
     "      return(self.selectedNodes)\n",
@@ -89,6 +111,7 @@
     "        self.status += \"type of tmp: %s\\n\" % type(tmp)\n",
     "        self.msgToKernel = tmp\n",
     "        self.status += \"%s\\n\" % tmp\n",
+    "        self.incomingMessageArrived = True\n",
     "        self.dispatch(self.msgToKernel)\n",
     " \n",
     "    def dispatch(self, msgRaw):\n",
@@ -108,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -587,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -599,16 +622,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "cy.requestSelectedNodes()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -618,8 +643,21 @@
      "output_type": "stream",
      "text": [
       "initial status message\n",
-      "setSize(800, 600)\n",
-      "entering fit (50)\n",
+      "entering requestSelectedNodes\n",
+      "requestSelectedNodes fell through sleepy loop\n",
+      "{}entered getBrowserResponse\n",
+      "sleeping in getBrowserResponse loop\n",
+      "\n",
+      "concluding requestSelectedNodes\n",
+      "---- python - msg arrived\n",
+      "len of tmp: 72\n",
+      "type of tmp: <class 'str'>\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[]}\n",
+      "entering dispatch\n",
+      "dispatch this msg: {'payload': [], 'callback': '', 'cmd': 'storeSelectedNodes', 'status': 'reply'}\n",
+      "msg.cmd: storeSelectedNodes\n",
+      "storing selected nodes to self.selectedNodes []\n",
+      "sleeping in getBrowserResponse loop\n",
       "\n"
      ]
     }
@@ -630,22 +668,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['REACTOME_GLYCEROPHOSPHOLIPID_BIOSYNTHESIS']"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cy.selectedNodes"
    ]
@@ -661,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -672,19 +699,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PLD3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "node = cy.getSelectedNodes()[0]\n",
     "print(node)"
