by sending a cleanSlate message between getSelectedNodes, the js actually sees successive getSelectedNodes

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -66,28 +66,31 @@
     "      self.msgFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": margin});\n",
     "    def getBrowserResponse(self):\n",
-    "       self.status += \"entered getBrowserResponse\\n\"\n",
+    "       self.status += \" *** entered getBrowserResponse\\n\"\n",
     "       browserResponse = 0;\n",
-    "       for i in range(1, 3):\n",
-    "         self.status += \"sleeping in getBrowserResponse loop\\n\"\n",
-    "         time.sleep(2)\n",
-    "         if(self.globalStatus == \"done\"):\n",
-    "           browserResponse = 99;\n",
-    "           break;\n",
-    "       self.status += \"thread ending, browserResponse: %d\\n\" % browserResponse;\n",
+    "       for i in range(1, 5):\n",
+    "         self.status += \" *** sleeping in getBrowserResponse loop, %d\\n\" % i\n",
+    "         time.sleep(0.5)\n",
+    "         if(self.incomingMessageArrived):\n",
+    "            self.status += \" *** getBrowserResponse learns that message has arrived\\n\"\n",
+    "            break;\n",
+    "       self.status += \" *** thread ending, browserResponse: %d\\n\" % browserResponse;\n",
+    "       self.status += \" *** selected: %s\\n\" % self.selectedNodes;\n",
+    "       self.status += \"\\n\"\n",
     "\n",
     "    def requestSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
     "      self.incomingMessageArrived = False;\n",
     "      self.status += \"entering requestSelectedNodes\\n\";\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": \"\"});\n",
     "      # while(self.incomingMessageArrived == False):\n",
     "      #  self.status += \"about to sleep, waiting for incoming message\\n\";\n",
     "      #  time.sleep(0.1)\n",
-    "      self.status += \"requestSelectedNodes fell through sleepy loop\\n\";\n",
-    "      self.status += self.msgToKernel\n",
-    "      threading.Thread(target=self.getBrowserResponse).start()\n",
+    "      #self.status += \"requestSelectedNodes fell through sleepy loop\\n\";\n",
+    "      #self.status += self.msgToKernel\n",
+    "      #threading.Thread(target=self.getBrowserResponse).start()\n",
     "      self.status += \"\\nconcluding requestSelectedNodes\\n\"\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
@@ -131,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -304,6 +307,9 @@
        "           console.log(\"========================\");\n",
        "           console.log(this);\n",
        "           switch(msg.cmd) {\n",
+       "              case 'cleanSlate':\n",
+       "                 console.log(\"got request to cleanSlate\");\n",
+       "                 break;\n",
        "              case 'fit':\n",
        "                 var margin = msg.payload;\n",
        "                 console.log(\"fit with margin: \" + margin)\n",
@@ -543,6 +549,9 @@
     "           console.log(\"========================\");\n",
     "           console.log(this);\n",
     "           switch(msg.cmd) {\n",
+    "              case 'cleanSlate':\n",
+    "                 console.log(\"got request to cleanSlate\");\n",
+    "                 break;\n",
     "              case 'fit':\n",
     "                 var margin = msg.payload;\n",
     "                 console.log(\"fit with margin: \" + margin)\n",
@@ -610,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -622,18 +631,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "cy.status = \"\"\n",
     "cy.requestSelectedNodes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
@@ -642,28 +652,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initial status message\n",
       "entering requestSelectedNodes\n",
-      "requestSelectedNodes fell through sleepy loop\n",
-      "{}entered getBrowserResponse\n",
-      "sleeping in getBrowserResponse loop\n",
       "\n",
       "concluding requestSelectedNodes\n",
       "---- python - msg arrived\n",
-      "len of tmp: 72\n",
+      "len of tmp: 94\n",
       "type of tmp: <class 'str'>\n",
-      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[]}\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}\n",
       "entering dispatch\n",
-      "dispatch this msg: {'payload': [], 'callback': '', 'cmd': 'storeSelectedNodes', 'status': 'reply'}\n",
+      "dispatch this msg: {'payload': ['LPCAT2', 'PLD2', 'PLD3'], 'callback': '', 'cmd': 'storeSelectedNodes', 'status': 'reply'}\n",
       "msg.cmd: storeSelectedNodes\n",
-      "storing selected nodes to self.selectedNodes []\n",
-      "sleeping in getBrowserResponse loop\n",
+      "storing selected nodes to self.selectedNodes ['LPCAT2', 'PLD2', 'PLD3']\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print(cy.status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.incomingMessageArrived = False\n",
+    "cy.incomingMessageArrived"
    ]
   },
   {
