threaded function called again

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
     "      #  time.sleep(0.1)\n",
     "      #self.status += \"requestSelectedNodes fell through sleepy loop\\n\";\n",
     "      #self.status += self.msgToKernel\n",
-    "      #threading.Thread(target=self.getBrowserResponse).start()\n",
+    "      threading.Thread(target=self.getBrowserResponse).start()\n",
     "      self.status += \"\\nconcluding requestSelectedNodes\\n\"\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -653,16 +653,22 @@
      "output_type": "stream",
      "text": [
       "entering requestSelectedNodes\n",
+      " *** entered getBrowserResponse\n",
+      " *** sleeping in getBrowserResponse loop, 1\n",
       "\n",
       "concluding requestSelectedNodes\n",
       "---- python - msg arrived\n",
-      "len of tmp: 94\n",
+      "len of tmp: 77\n",
       "type of tmp: <class 'str'>\n",
-      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"MAG\"]}\n",
       "entering dispatch\n",
-      "dispatch this msg: {'payload': ['LPCAT2', 'PLD2', 'PLD3'], 'callback': '', 'cmd': 'storeSelectedNodes', 'status': 'reply'}\n",
+      "dispatch this msg: {'payload': ['MAG'], 'callback': '', 'cmd': 'storeSelectedNodes', 'status': 'reply'}\n",
       "msg.cmd: storeSelectedNodes\n",
-      "storing selected nodes to self.selectedNodes ['LPCAT2', 'PLD2', 'PLD3']\n",
+      "storing selected nodes to self.selectedNodes ['MAG']\n",
+      " *** getBrowserResponse learns that message has arrived\n",
+      " *** thread ending, browserResponse: 0\n",
+      " *** selected: ['MAG']\n",
+      "\n",
       "\n"
      ]
     }
