before adding nested thread subclass

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -77,8 +77,9 @@
     "       self.status += \" *** thread ending, browserResponse: %d\\n\" % browserResponse;\n",
     "       self.status += \" *** selected: %s\\n\" % self.selectedNodes;\n",
     "       self.status += \"\\n\"\n",
+    "       return(self.selectedNodes);\n",
     "\n",
-    "    def requestSelectedNodes(self):\n",
+    "    def getSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
     "      self.incomingMessageArrived = False;\n",
     "      self.status += \"entering requestSelectedNodes\\n\";\n",
@@ -91,9 +92,13 @@
     "      #self.status += \"requestSelectedNodes fell through sleepy loop\\n\";\n",
     "      #self.status += self.msgToKernel\n",
     "      threading.Thread(target=self.getBrowserResponse).start()\n",
-    "      self.status += \"\\nconcluding requestSelectedNodes\\n\"\n",
+    "      console.log(\"after join\")\n",
+    "      #for i in range(1,10):\n",
+    "      #  print(\"getSelectedNodes waiting, %d: %s\" % (i, self.selectedNodes))\n",
+    "      #  time.sleep(1);\n",
+    "      #self.status += \"\\nconcluding requestSelectedNodes\\n\"\n",
     "        \n",
-    "    def getSelectedNodes(self):\n",
+    "    def oldGetSelectedNodes(self):\n",
     "      self.status += \"entering getSelectedNodes, current content is %s\\n\" % self.selectedNodes\n",
     "      return(self.selectedNodes)\n",
     "\n",
@@ -134,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -619,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -631,19 +636,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'console' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-160-c1de6bf54dbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetSelectedNodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-157-4555a6326f68>\u001b[0m in \u001b[0;36mgetSelectedNodes\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     54\u001b[0m       \u001b[0;31m#self.status += self.msgToKernel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m       \u001b[0mthreading\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mThread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetBrowserResponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m       \u001b[0mconsole\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"after join\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m       \u001b[0;31m#for i in range(1,10):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m       \u001b[0;31m#  print(\"getSelectedNodes waiting, %d: %s\" % (i, self.selectedNodes))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'console' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cy.status = \"\"\n",
-    "cy.requestSelectedNodes()"
+    "cy.getSelectedNodes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -655,8 +673,6 @@
       "entering requestSelectedNodes\n",
       " *** entered getBrowserResponse\n",
       " *** sleeping in getBrowserResponse loop, 1\n",
-      "\n",
-      "concluding requestSelectedNodes\n",
       "---- python - msg arrived\n",
       "len of tmp: 77\n",
       "type of tmp: <class 'str'>\n",
