MyThread nested class now has access to containing class, cyjsWidget

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -40,8 +40,9 @@
     "import ipywidgets as widgets\n",
     "import json\n",
     "import time\n",
-    "import threading\n",
+    "from threading import Thread\n",
     "from traitlets import Int, Unicode, Tuple, CInt, Dict, validate, observe\n",
+    "\n",
     "\n",
     "class cyjsWidget(widgets.DOMWidget):\n",
     "    \n",
@@ -55,7 +56,31 @@
     "    selectedNodes = [];\n",
     "    incomingMessageArrived = False;\n",
     "    globalStatus = \"blank\"\n",
-    "        \n",
+    "\n",
+    "    #------------------------------------------------------------------------------\n",
+    "    class MyThread(Thread):\n",
+    "       owner = None\n",
+    "    \n",
+    "       def __init__(self, owner, group=None, target=None, name=None,\n",
+    "                    args=(), kwargs=None, *, daemon=None):\n",
+    "          Thread.__init__(self, group, target, name, args, kwargs, daemon=daemon)\n",
+    "          self.owner = owner\n",
+    "\n",
+    "       def run(self):\n",
+    "          #print(\"nEsted %s started, owner: %s\" % (self.getName(), self.owner)\n",
+    "          print(\" thread starting %s - %s\" % self.getName());\n",
+    "          #print(\"globalStatus: %s\" % self.globalStatus)\n",
+    "          time.sleep(1) \n",
+    "          print(\"nested %s finished\" % self.getName())\n",
+    "                \n",
+    "    #------------------------------------------------------------------------------\n",
+    "\n",
+    "    def testThread(self):\n",
+    "      for i in range(4):\n",
+    "         threadName = \"Thread-%s\" % (i + 1)\n",
+    "         mythread = self.MyThread(name=threadName, owner=self)\n",
+    "         mythread.start()\n",
+    "    \n",
     "    def setSize(self, width, height):\n",
     "      self.status += \"setSize(%d, %d)\\n\" % (width, height)\n",
     "      self.frameWidth = width\n",
@@ -91,8 +116,7 @@
     "      #  time.sleep(0.1)\n",
     "      #self.status += \"requestSelectedNodes fell through sleepy loop\\n\";\n",
     "      #self.status += self.msgToKernel\n",
-    "      threading.Thread(target=self.getBrowserResponse).start()\n",
-    "      console.log(\"after join\")\n",
+    "      Thread(target=self.getBrowserResponse).start()\n",
     "      #for i in range(1,10):\n",
     "      #  print(\"getSelectedNodes waiting, %d: %s\" % (i, self.selectedNodes))\n",
     "      #  time.sleep(1);\n",
@@ -139,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -624,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -636,32 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'console' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-160-c1de6bf54dbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetSelectedNodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-157-4555a6326f68>\u001b[0m in \u001b[0;36mgetSelectedNodes\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     54\u001b[0m       \u001b[0;31m#self.status += self.msgToKernel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m       \u001b[0mthreading\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mThread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetBrowserResponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m       \u001b[0mconsole\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"after join\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m       \u001b[0;31m#for i in range(1,10):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m       \u001b[0;31m#  print(\"getSelectedNodes waiting, %d: %s\" % (i, self.selectedNodes))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'console' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "cy.status = \"\"\n",
-    "cy.getSelectedNodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -670,47 +669,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entering requestSelectedNodes\n",
-      " *** entered getBrowserResponse\n",
-      " *** sleeping in getBrowserResponse loop, 1\n",
-      "---- python - msg arrived\n",
-      "len of tmp: 77\n",
-      "type of tmp: <class 'str'>\n",
-      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"MAG\"]}\n",
-      "entering dispatch\n",
-      "dispatch this msg: {'payload': ['MAG'], 'callback': '', 'cmd': 'storeSelectedNodes', 'status': 'reply'}\n",
-      "msg.cmd: storeSelectedNodes\n",
-      "storing selected nodes to self.selectedNodes ['MAG']\n",
-      " *** getBrowserResponse learns that message has arrived\n",
-      " *** thread ending, browserResponse: 0\n",
-      " *** selected: ['MAG']\n",
-      "\n",
+      " thread starting Thread-1\n",
+      " thread starting Thread-2\n",
+      " thread starting Thread-3\n",
+      " thread starting Thread-4\n",
+      "nested Thread-2 finishednested Thread-1 finished\n",
+      "nested Thread-3 finished\n",
+      "nested Thread-4 finished\n",
       "\n"
      ]
     }
    ],
+   "source": [
+    "cy.testThread()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cy.status = \"\"\n",
+    "cy.getSelectedNodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "print(cy.status)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cy.incomingMessageArrived = False\n",
     "cy.incomingMessageArrived"
