better thread class, but no network display. checkpointing this before going back in time

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -31,9 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -56,23 +56,49 @@
     "    selectedNodes = [];\n",
     "    incomingMessageArrived = False;\n",
     "    globalStatus = \"blank\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "import json\n",
+    "import time\n",
+    "from threading import Thread\n",
+    "from traitlets import Int, Unicode, Tuple, CInt, Dict, validate, observe\n",
+    "\n",
+    "\n",
+    "class newcyjsWidget(widgets.DOMWidget):\n",
+    "    \n",
+    "    _view_name = Unicode('CyjsView').tag(sync=True)\n",
+    "    _view_module = Unicode('cyjs').tag(sync=True)\n",
+    "    frameWidth = Int(400).tag(sync=True)\n",
+    "    frameHeight = Int(300).tag(sync=True)\n",
+    "    msgFromKernel = Unicode(\"{}\").tag(sync=True)\n",
+    "    msgToKernel = Unicode(\"{}\").tag(sync=True)\n",
+    "    status = \"initial status message\\n\"\n",
+    "    selectedNodes = [];\n",
+    "    incomingMessageArrived = False;\n",
+    "    globalStatus = \"blank\"\n",
     "\n",
     "    #------------------------------------------------------------------------------\n",
     "    class MyThread(Thread):\n",
     "       owner = None\n",
-    "    \n",
     "       def __init__(self, owner, group=None, target=None, name=None,\n",
     "                    args=(), kwargs=None, *, daemon=None):\n",
     "          Thread.__init__(self, group, target, name, args, kwargs, daemon=daemon)\n",
     "          self.owner = owner\n",
-    "\n",
     "       def run(self):\n",
-    "          #print(\"nEsted %s started, owner: %s\" % (self.getName(), self.owner)\n",
-    "          print(\" thread starting %s - %s\" % self.getName());\n",
-    "          #print(\"globalStatus: %s\" % self.globalStatus)\n",
-    "          time.sleep(1) \n",
-    "          print(\"nested %s finished\" % self.getName())\n",
-    "                \n",
+    "          while(not self.owner.incomingMessageArrived):\n",
+    "             print(\"thread, no message yet, sleeping\")\n",
+    "             time.sleep(1.0)\n",
+    "          print(\"           message arrived\")\n",
     "    #------------------------------------------------------------------------------\n",
     "\n",
     "    def testThread(self):\n",
@@ -111,6 +137,11 @@
     "      self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": \"\"});\n",
+    "      observingTread = self.MyThread(name=threadName, owner=self)\n",
+    "      print(\"getSelectedNodes about to start observingThread\")\n",
+    "      observingThread.start()\n",
+    "      observingThread.join()\n",
+    "      print(\"getSelectedNodes, observingThread now complete\")\n",
     "      # while(self.incomingMessageArrived == False):\n",
     "      #  self.status += \"about to sleep, waiting for incoming message\\n\";\n",
     "      #  time.sleep(0.1)\n",
@@ -163,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -648,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -660,26 +691,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " thread starting Thread-1\n",
-      " thread starting Thread-2\n",
-      " thread starting Thread-3\n",
-      " thread starting Thread-4\n",
-      "nested Thread-2 finishednested Thread-1 finished\n",
-      "nested Thread-3 finished\n",
-      "nested Thread-4 finished\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'initial status message\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "cy.status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "cy.testThread()"
    ]
