--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -95,8 +95,11 @@
     "          Thread.__init__(self, group, target, name, args, kwargs, daemon=daemon)\n",
     "          self.owner = owner\n",
     "       def run(self):\n",
-    "          while(not self.owner.incomingMessageArrived):\n",
-    "             print(\"thread, no message yet, sleeping\")\n",
+    "          maxLoops = 5\n",
+    "          counter = 0\n",
+    "          while(not self.owner.incomingMessageArrived and counter < maxLoops):\n",
+    "             counter += 1\n",
+    "             print(\"thread, no message yet, sleeping, loop %d\" % counter)\n",
     "             time.sleep(1.0)\n",
     "          print(\"           message arrived\")\n",
     "    #------------------------------------------------------------------------------\n",
@@ -141,7 +144,7 @@
     "      observingThread = self.MyThread(name=\"getSelectedNodes-thread\", owner=self)\n",
     "      print(\"getSelectedNodes about to start observingThread\")\n",
     "      observingThread.start()\n",
-    "      observingThread.join()\n",
+    "      #observingThread.join()\n",
     "      print(\"getSelectedNodes, observingThread now complete\")\n",
     "      # while(self.incomingMessageArrived == False):\n",
     "      #  self.status += \"about to sleep, waiting for incoming message\\n\";\n",
@@ -195,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -680,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -692,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -702,56 +705,47 @@
      "output_type": "stream",
      "text": [
       "getSelectedNodes about to start observingThread\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n",
-      "thread, no message yet, sleeping\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-c1de6bf54dbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetSelectedNodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-16-f8b7bec60ba4>\u001b[0m in \u001b[0;36mgetSelectedNodes\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     73\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"getSelectedNodes about to start observingThread\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m       \u001b[0mobservingThread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m       \u001b[0mobservingThread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"getSelectedNodes, observingThread now complete\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m       \u001b[0;31m# while(self.incomingMessageArrived == False):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/paul/anaconda/lib/python3.5/threading.py\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1052\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1053\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1054\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wait_for_tstate_lock\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1055\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1056\u001b[0m             \u001b[0;31m# the behavior of a negative timeout isn't documented, but\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/paul/anaconda/lib/python3.5/threading.py\u001b[0m in \u001b[0;36m_wait_for_tstate_lock\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m   1068\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlock\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# already determined that the C code is done\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1069\u001b[0m             \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_stopped\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1070\u001b[0;31m         \u001b[0;32melif\u001b[0m \u001b[0mlock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblock\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1071\u001b[0m             \u001b[0mlock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelease\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1072\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "thread, no message yet, sleeping, loop 1\n",
+      "getSelectedNodes, observingThread now complete\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "cy.status = \"\"\n",
-    "cy.getSelectedNodes()"
+    "print(cy.getSelectedNodes())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entering requestSelectedNodes\n",
+      " *** entered getBrowserResponse\n",
+      " *** sleeping in getBrowserResponse loop, 1\n",
+      "---- python - msg arrived\n",
+      "len of tmp: 80\n",
+      "type of tmp: <class 'str'>\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"STXBP3\"]}\n",
+      "entering dispatch\n",
+      "dispatch this msg: {'status': 'reply', 'payload': ['STXBP3'], 'cmd': 'storeSelectedNodes', 'callback': ''}\n",
+      "msg.cmd: storeSelectedNodes\n",
+      "storing selected nodes to self.selectedNodes ['STXBP3']\n",
+      " *** getBrowserResponse learns that message has arrived\n",
+      " *** thread ending, browserResponse: 0\n",
+      " *** selected: ['STXBP3']\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(cy.status)"
    ]
